<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.grzegorz.myfirstapp.DisplaySingleBookActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        card_view:cardBackgroundColor="@color/cardview_dark_background"

        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="5dp"
        card_view:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:layout_weight="1"

                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/authorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/author"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/haveBook"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_weight="1"
                android:onClick="toggleHaveBtn"
                android:text="@string/have_book"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/addBookBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="addBtnPressed"
                android:text="@string/add_book" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
